welcome screen implemented

--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,4 @@ include ':tracker'
 include ':tracker:tracker_presentation'
 include ':tracker:tracker_data'
 include ':tracker:tracker_domain'
+include ':core-ui'
